3 album tracks modals coded

--- a/music.html
+++ b/music.html
@@ -37,57 +37,77 @@
 
         <div class="container">
         <div class="row justify-content-center">
+
             <div class="card m-3" style="width: 18rem;">
-                <img class="card-img-top" src="images/album_b600.jpg" alt="Wild Planet album">
+                <img class="card-img-top" src="images/album_b600.jpg" alt="The B-52's album">
                     <div class="card-body">
                         <h3 class="ahheader">The B-52's</h3>
                         <p class="ahbodytext">Platinum debut with some of the band's best known songs such as Rock Lobster and Planet Claire</p>
                         <a href="https://music.apple.com/us/album/the-b-52s/983126000"><img src="images/appleicon.png" alt="buy album from Apple"></a>
-                        <button type="button" class="btn btn-primary" data-toggle="modal"
-                        data-target="#album1"> 
-                                LISTEN 
-                            </button>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#album1">LISTEN</button>
                         <p class="ahcardfooter">1979</p>
                     </div>
             </div>
             <div class="modal fade" id="album1" tabindex="-1" role="dialog" aria-labelledby="album1Label" aria-hidden="true"> 
+                <div class="modal-dialog" role="document"> 
+                    <div class="modal-content"> 
+                        <div class="modal-header"> 
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button> 
+                        </div> 
+                    <div class="modal-body"> 
+                        <iframe src="https://open.spotify.com/embed/album/3eXETk1esvZPRluDCWH3GN" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div> 
+                    </div> 
+                </div> 
+            </div> 
+
+            <div class="card m-3" style="width: 18rem;">
+                    <img class="card-img-top" src="images/album_wp600.jpg" alt="Wild Planet album">
+                        <div class="card-body">
+                            <h3 class="ahheader">Wild Planet</h3>
+                            <p class="ahbodytext">Certified gold second studio album includes concert staples such as Private Idaho</p>
+                            <a href="https://music.apple.com/us/album/wild-planet/983119568"><img src="images/appleicon.png" alt="buy album from Apple"></a>
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#album2">LISTEN</button>
+                            <p class="ahcardfooter">1980</p>
+                        </div>
+                </div>
+                <div class="modal fade" id="album2" tabindex="-1" role="dialog" aria-labelledby="album2Label" aria-hidden="true"> 
                     <div class="modal-dialog" role="document"> 
                         <div class="modal-content"> 
                             <div class="modal-header"> 
-                            <button type="button" class="close"
-                            data-dismiss="modal" aria-label="Close"> 
-                            <span aria-hidden="true">×</span></button> 
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button> 
                             </div> 
                         <div class="modal-body"> 
-                                <iframe src="https://open.spotify.com/embed/album/3eXETk1esvZPRluDCWH3GN" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                            <iframe src="https://open.spotify.com/embed/album/1K4t7Jv7DuolDWnFLxKxkd" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                         </div> 
                         </div> 
                     </div> 
                 </div> 
 
-
-
-
-
-            <div class="card m-3" style="width: 18rem;">
-                <img class="card-img-top" src="images/album_wp600.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h3 class="ahheader">Wild Planet</h3>
-                        <p class="ahbodytext">Certified gold second studio album includes concert staples such as Private Idaho</p>
-                        <a href="https://music.apple.com/us/album/wild-planet/983119568"><img src="images/appleicon.png" alt="buy album from Apple"></a>
-                        <a href="#" class="btn btn-primary">Listen</a>
-                        <p class="ahcardfooter">1980</p>
+                <div class="card m-3" style="width: 18rem;">
+                        <img class="card-img-top" src="images/album_pm600.jpg" alt="Wild Planet album">
+                            <div class="card-body">
+                                <h3 class="ahheader">Party Mix!</h3>
+                                <p class="ahbodytext">Six-track compilation with hits from the first two albums remixed into two long tracks</p>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#album3">LISTEN</button>
+                                <p class="ahcardfooter">1981</p>
+                            </div>
                     </div>
-            </div>        
-            <div class="card m-3" style="width: 18rem;">
-                <img class="card-img-top" src="images/album_pm600.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h3 class="ahheader">Party Mix!</h3>
-                        <p class="ahbodytext">Six-track compilation with hits from the first two albums remixed into two long tracks</p>
-                        <a href="#" class="btn btn-primary">Listen</a>
-                        <p class="ahcardfooter">1981</p>
-                    </div>
-            </div>          
+                    <div class="modal fade" id="album3" tabindex="-1" role="dialog" aria-labelledby="album3Label" aria-hidden="true"> 
+                        <div class="modal-dialog" role="document"> 
+                            <div class="modal-content"> 
+                                <div class="modal-header"> 
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button> 
+                                </div> 
+                            <div class="modal-body"> 
+                                <iframe src="https://open.spotify.com/embed/album/0XThJ7JycfCHOOZseyrKva" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                            </div> 
+                            </div> 
+                        </div> 
+                    </div> 
+
+
+                       
             <div class="card m-3" style="width: 18rem;">
                     <img class="card-img-top" src="images/album_m600.jpg" alt="Card image cap">
                         <div class="card-body">
