added alt text to images

--- a/music.html
+++ b/music.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <html>
-    
+
     <head>
         <title>The B-52's Discography</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -32,7 +32,7 @@
 
         <div class="container pt-2 pb-5">
                 <h1 class="ahjumbotext">The B-52's Discography</h1>
-                <p class="ahbodytext">Forty years and twenty million albums into their career, the B-52's remain one of the most beloved and enduring bands. From groundbreaking songs like “Rock Lobster,” “Dance This Mess Around,” and “Private Idaho“ to chart-topping hits like “Love Shack,” “Roam,” and “Deadbeat Club,” their unforgettable tunes start a dance party every time the music begins.</p>
+                <p class="ahbodytext">Forty years and twenty million albums into their career, the B-52's remain one of the most beloved and enduring bands. From groundbreaking songs like "Rock Lobster," "Dance This Mess Around," and "Private Idaho" to chart-topping hits like "Love Shack," "Roam," and "Deadbeat Club," their unforgettable tunes start a dance party every time the music begins.</p>
               </div>
 
         <div class="container">
@@ -85,7 +85,7 @@
                 </div> 
 
                 <div class="card m-3" style="width: 18rem;">
-                        <img class="card-img-top" src="images/album_pm600.jpg" alt="Wild Planet album">
+                        <img class="card-img-top" src="images/album_pm600.jpg" alt="Paty Mix album">
                             <div class="card-body">
                                 <h3 class="ahheader">Party Mix!</h3>
                                 <p class="ahbodytext">Six-track compilation with hits from the first two albums remixed into two long tracks</p>
@@ -109,7 +109,7 @@
 
                        
             <div class="card m-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/album_m600.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="images/album_m600.jpg" alt="Mesopotamia album">
                         <div class="card-body">
                             <h3 class="ahheader">Mesopotamia</h3>
                             <p class="ahbodytext">EP with six new songs and a different sound produced by Talking Heads' David Byrne</p>
@@ -126,16 +126,16 @@
                         </div>
                 </div>                  
             <div class="card m-3" style="width: 18rem;">
-                <img class="card-img-top" src="images/album_bots600.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/album_bots600.jpg" alt="Bouncing Off the Satellites album">
                     <div class="card-body">
-                        <h3 class="ahheader">Bouncing off the Satellites</h3>
+                        <h3 class="ahheader">Bouncing Off the Satellites</h3>
                         <p class="ahbodytext">Ballad-driven, less upbeat fourth studio album was the last to include Ricky Wilson</p>
                         <a href="https://music.apple.com/us/album/bouncing-off-the-satellites/983125253"><img src="images/appleicon.png" alt="buy album from Apple"></a>
                         <p class="ahcardfooter">1986</p>
                     </div>
             </div>                 
             <div class="card m-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/album_ct600.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="images/album_ct600.jpg" alt="Cosmic Thing album">
                         <div class="card-body">
                             <h3 class="ahheader">Cosmic Thing</h3>
                             <p class="ahbodytext">Comeback fifth studio platinum album includes the hits Roam and Love Shack</p>
@@ -144,7 +144,7 @@
                         </div>
             </div>                  
              <div class="card m-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/album_dtma450.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="images/album_dtma450.jpg" alt="Dance this Mess Around album">
                         <div class="card-body">
                             <h3 class="ahheader">Dance this Mess Around</h3>
                             <p class="ahbodytext">The Best of the B-52's compilation with the greatest hits from the late-'70s and early-'80s</p>
@@ -152,7 +152,7 @@
                         </div>
             </div>                            
             <div class="card m-3" style="width: 18rem;">
-                <img class="card-img-top" src="images/album_gs600.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/album_gs600.jpg" alt="Good Stuff album">
                     <div class="card-body">
                         <h3 class="ahheader">Good Stuff</h3>
                         <p class="ahbodytext">Grammy-nominated sixth studio gold album includes radio hit Good Stuff</p>
@@ -161,7 +161,7 @@
                     </div>
             </div>          
             <div class="card m-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/album_tc600.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="images/album_tc600.jpg" alt="Time Capsule album">
                         <div class="card-body">
                             <h3 class="ahheader">Time Capsule</h3>
                             <p class="ahbodytext">Songs for a Future Generation compilation album includes sixteen greatest hits</p>
@@ -169,7 +169,7 @@
                         </div>
             </div> 
             <div class="card m-3" style="width: 18rem;">
-                <img class="card-img-top" src="images/album_nm600.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/album_nm600.jpg" alt="Nude on the Moon album">
                     <div class="card-body">
                         <h3 class="ahheader">Nude on the Moon</h3>
                         <p class="ahbodytext">The B-52's Anthology two-disk compilation album with 35 songs from 1979 to 1998</p>
@@ -177,7 +177,7 @@
                     </div>
             </div>  
             <div class="card m-3" style="width: 18rem;">
-                <img class="card-img-top" src="images/album_f600.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/album_f600.jpg" alt="Funplex album">
                     <div class="card-body">
                         <h3 class="ahheader">Funplex</h3>
                         <p class="ahbodytext">Seventh, and most recent, studio album of eleven new songs alongside bonus content</p>
@@ -186,7 +186,7 @@
                     </div>
             </div>  
             <div class="card m-3" style="width: 18rem;">
-                <img class="card-img-top" src="images/album_wtwc600.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/album_wtwc600.jpg" alt="With the Wild Crowd album">
                     <div class="card-body">
                         <h3 class="ahheader">With the Wild Crowd</h3>
                         <p class="ahbodytext">First official live album (with DVD recording) of Athens, Georgia concert on February 18, 2011</p>
@@ -194,7 +194,7 @@
                     </div>
             </div>  
             <div class="card m-3" style="width: 18rem;">
-                <img class="card-img-top" src="images/album_l600.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/album_l600.jpg" alt="Live 1979 album">
                     <div class="card-body">
                         <h3 class="ahheader">Live! 8-24-1979</h3>
                         <p class="ahbodytext">Live recording of August 24, 1979 concert at The Berklee Center in Boston, Massachusetts</p>
@@ -203,7 +203,7 @@
                     </div>
             </div>  
             <div class="card m-3" style="width: 18rem;">
-                <img class="card-img-top" src="images/album_wpc600.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/album_wpc600.jpg" alt="Chicago 1979 album">
                     <div class="card-body">
                         <h3 class="ahheader">West Park, Chicago, 1979</h3>
                         <p class="ahbodytext">A bootleg live recording of the eleven-song Illinois concert on October 6, 1979</p>
