links in new tabs

--- a/music.html
+++ b/music.html
@@ -43,7 +43,7 @@
                     <div class="card-body">
                         <h3 class="ahheader">The B-52's</h3>
                         <p class="ahbodytext">Platinum debut with some of the band's best known songs such as Rock Lobster and Planet Claire</p>
-                        <a href="https://music.apple.com/us/album/the-b-52s/983126000"><img src="images/appleicon.png" alt="buy album from Apple"></a>
+                        <a href="https://music.apple.com/us/album/the-b-52s/983126000" target="_blank"><img src="images/appleicon.png" alt="buy album from Apple"></a>
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#album1">LISTEN</button>
                         <p class="ahcardfooter">1979</p>
                     </div>
@@ -66,7 +66,7 @@
                     <div class="card-body">
                         <h3 class="ahheader">Wild Planet</h3>
                         <p class="ahbodytext">Certified gold second studio album includes concert staples such as Private Idaho</p>
-                        <a href="https://music.apple.com/us/album/wild-planet/983119568"><img src="images/appleicon.png" alt="buy album from Apple"></a>
+                        <a href="https://music.apple.com/us/album/wild-planet/983119568" target="_blank"><img src="images/appleicon.png" alt="buy album from Apple"></a>
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#album2">LISTEN</button>
                         <p class="ahcardfooter">1980</p>
                     </div>
@@ -120,7 +120,7 @@
                      <div class="card-body">
                         <h3 class="ahheader">Whammy</h3>
                         <p class="ahbodytext">Third studio album features drum machines, synths, and vocals from all five members</p>
-                        <a href="https://music.apple.com/us/album/whammy/983119846"><img src="images/appleicon.png" alt="buy album from Apple"></a>
+                        <a href="https://music.apple.com/us/album/whammy/983119846" target="_blank"><img src="images/appleicon.png" alt="buy album from Apple"></a>
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#album5">LISTEN</button>
                         <p class="ahcardfooter">1983</p>
                     </div>
@@ -143,7 +143,7 @@
                     <div class="card-body">
                         <h3 class="ahheader">Bouncing Off the Satellites</h3>
                         <p class="ahbodytext">Ballad-driven, less upbeat fourth studio album was the last to include Ricky Wilson</p>
-                        <a href="https://music.apple.com/us/album/bouncing-off-the-satellites/983125253"><img src="images/appleicon.png" alt="buy album from Apple"></a>
+                        <a href="https://music.apple.com/us/album/bouncing-off-the-satellites/983125253" target="_blank"><img src="images/appleicon.png" alt="buy album from Apple"></a>
                         <p class="ahcardfooter">1986</p>
                     </div>
             </div>      
@@ -153,7 +153,7 @@
                     <div class="card-body">
                         <h3 class="ahheader">Cosmic Thing</h3>
                         <p class="ahbodytext">Comeback fifth studio platinum album includes the hits Roam and Love Shack</p>
-                        <a href="https://music.apple.com/us/album/cosmic-thing/983850956"><img src="images/appleicon.png" alt="buy album from Apple"></a>
+                        <a href="https://music.apple.com/us/album/cosmic-thing/983850956" target="_blank"><img src="images/appleicon.png" alt="buy album from Apple"></a>
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#album7">LISTEN</button>
                         <p class="ahcardfooter">1989</p>
                     </div>
@@ -185,7 +185,7 @@
                         <div class="card-body">
                             <h3 class="ahheader">Good Stuff</h3>
                             <p class="ahbodytext">Grammy-nominated sixth studio gold album includes radio hit Good Stuff</p>
-                            <a href="https://music.apple.com/us/album/good-stuff/983125862"><img src="images/appleicon.png" alt="buy album from Apple"></a>
+                            <a href="https://music.apple.com/us/album/good-stuff/983125862" target="_blank"><img src="images/appleicon.png" alt="buy album from Apple"></a>
                             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#album9">LISTEN</button>
                             <p class="ahcardfooter">1992</p>
                         </div>
@@ -253,7 +253,7 @@
                             <div class="card-body">
                                 <h3 class="ahheader">Funplex</h3>
                                 <p class="ahbodytext">Seventh, and most recent, studio album of eleven new songs alongside bonus content</p>
-                                <a href="https://music.apple.com/us/album/funplex/721287617"><img src="images/appleicon.png" alt="buy album from Apple"></a>
+                                <a href="https://music.apple.com/us/album/funplex/721287617" target="_blank"><img src="images/appleicon.png" alt="buy album from Apple"></a>
                                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#album12">LISTEN</button>
                                 <p class="ahcardfooter">2008</p>
                             </div>
@@ -298,7 +298,7 @@
                         <div class="card-body">
                             <h3 class="ahheader">Live! 8-24-1979</h3>
                             <p class="ahbodytext">Live recording of August 24, 1979 concert at The Berklee Center in Boston, Massachusetts</p>
-                            <a href="https://music.apple.com/us/album/live-8-24-1979/984765166"><img src="images/appleicon.png" alt="buy album from Apple"></a>
+                            <a href="https://music.apple.com/us/album/live-8-24-1979/984765166" target="_blank"><img src="images/appleicon.png" alt="buy album from Apple"></a>
                             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#album14">LISTEN</button>
                             <p class="ahcardfooter">2015</p>
                         </div>
