submit through gitpages

--- a/music.html
+++ b/music.html
@@ -32,7 +32,7 @@
 
         <div class="container pt-2 pb-5">
                 <h1 class="ahjumbotext">The B-52's Discography</h1>
-                <p class="ahbodytext">Forty years and twenty million albums into their career, the B-52's remain one of the most beloved and enduring bands. From groundbreaking songs like "Rock Lobster," "Dance This Mess Around," and "Private Idaho" to chart-topping hits like "Love Shack," "Roam," and "Deadbeat Club," their unforgettable tunes start a dance party every time the music begins.</p>
+                <p class="ahbodytext">Forty years and twenty million albums in, the B-52's remain one of the most beloved and enduring bands. From groundbreaking songs like "Rock Lobster," "Dance This Mess Around," and "Private Idaho" to chart-topping hits like "Love Shack," "Roam," and "Deadbeat Club," their unforgettable tunes start a dance party every time the music begins.</p>
               </div>
 
         <div class="container">
