--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                 <ul class="nav nav-pills justify-content-center ahnavblock">
                     <li class="nav-item pt-2"><a class="nav-link ahnavlink" href="./music.html">MUSIC</a></li>
                     <li class="nav-item"><img src="images/lobster_ani.png" class="ahnavicon" alt="lobster icon"></li>
-                    <li class="nav-item pt-2"><a class="nav-link ahnavlink" href="https://www.theb52s.com/bio">ABOUT</a></li>
+                    <li class="nav-item pt-2"><a class="nav-link ahnavlink" href="#">ABOUT</a></li>
                     <li class="nav-item"><img src="images/starburst_ani.png" class="ahnavicon" alt="starburst icon"></li>    
-                    <li class="nav-item pt-2"><a class="nav-link ahnavlink" href="https://www.theb52s.com/tour">TOUR</a></li>
+                    <li class="nav-item pt-2"><a class="nav-link ahnavlink" href="#">TOUR</a></li>
                     <li class="nav-item"><img src="images/wig_ani.png" class="ahnavicon" alt="wig icon"></li>
-                    <li class="nav-item pt-2"><a class="nav-link ahnavlink" href="https://www.theb52s.com/gallery">GALLERY</a></li>
+                    <li class="nav-item pt-2"><a class="nav-link ahnavlink" href="#">GALLERY</a></li>
                     <li class="nav-item"><img src="images/moon_ani.png" class="ahnavicon" alt="moon icon"></li>
-                    <li class="nav-item pt-2"><a class="nav-link ahnavlink" href="https://theb52s.manheadmerch.com/">SHOP</a></li>                   
+                    <li class="nav-item pt-2"><a class="nav-link ahnavlink" href="#">SHOP</a></li>                   
                 </ul>
             </div>
         </nav>
