--- a/music.html
+++ b/music.html
@@ -22,10 +22,10 @@
             <div class="container-fluid p-2">
                 <ul class="nav nav-pills justify-content-center ahnavblock">
                     <li class="nav-item p-2"><a class="active nav-link ahnavlink" href="#">MUSIC</a></li>
-                    <li class="nav-item p-2"><a class="nav-link ahnavlink" href="https://www.theb52s.com/bio">ABOUT</a></li>
-                    <li class="nav-item p-2"><a class="nav-link ahnavlink" href="https://www.theb52s.com/tour">TOUR</a></li>
-                    <li class="nav-item p-2"><a class="nav-link ahnavlink" href="https://www.theb52s.com/gallery">GALLERY</a></li>
-                    <li class="nav-item p-2"><a class="nav-link ahnavlink" href="https://theb52s.manheadmerch.com/">SHOP</a></li>                   
+                    <li class="nav-item p-2"><a class="nav-link ahnavlink" href="#">ABOUT</a></li>
+                    <li class="nav-item p-2"><a class="nav-link ahnavlink" href="#">TOUR</a></li>
+                    <li class="nav-item p-2"><a class="nav-link ahnavlink" href="#">GALLERY</a></li>
+                    <li class="nav-item p-2"><a class="nav-link ahnavlink" href="#">SHOP</a></li>                   
                 </ul>
             </div>
         </nav>
