nav update across pages

--- a/shop.html
+++ b/shop.html
@@ -2,7 +2,7 @@
     <html>
 
     <head>
-        <title>The B-52's Discography</title>
+        <title>The B-52's Shop</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="./index.css">
@@ -12,24 +12,24 @@
 
         <nav class="navbar navbar-expand-lg custom-toggler navbar-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <div class="container-fluid p-2">
-                <ul class="nav nav-pills justify-content-center ahnavblock">
-                    <li class="nav-item p-2"><a class="active nav-link ahnavlink" href="#">MUSIC</a></li>
-                    <li class="nav-item p-2"><a class="nav-link ahnavlink" href="#">ABOUT</a></li>
-                    <li class="nav-item p-2"><a class="nav-link ahnavlink" href="#">TOUR</a></li>
-                    <li class="nav-item p-2"><a class="nav-link ahnavlink" href="#">GALLERY</a></li>
-                    <li class="nav-item p-2"><a class="nav-link ahnavlink" href="#">SHOP</a></li>                   
-                </ul>
-            </div>
-        </div>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="container-fluid p-2">
+                        <ul class="nav nav-pills justify-content-center ahnavblock">
+                                <li class="nav-item p-2"><a class="nav-link ahnavlink" href="./music.html">MUSIC</a></li>
+                                <li class="nav-item p-2"><a class="nav-link ahnavlink" href="./about.html">ABOUT</a></li>
+                                <li class="nav-item p-2"><a class="nav-link ahnavlink" href="./tour.html">TOUR</a></li>
+                                <li class="nav-item p-2"><a class="nav-link ahnavlink" href="./gallery.html">GALLERY</a></li>
+                                <li class="nav-item p-2"><a class="active nav-link ahnavlink" href="./shop.html">SHOP</a></li>           
+                        </ul>
+                    </div>
+                </div>
         </nav>
 
         <div class="container pt-2 pb-5">
-                <h1 class="ahjumbotext">The B-52's Discography</h1>
-                <p class="ahbodytext">Forty years and twenty million albums in, the B-52's remain one of the most beloved and enduring bands. From groundbreaking songs like "Rock Lobster," "Dance This Mess Around," and "Private Idaho" to chart-topping hits like "Love Shack," "Roam," and "Deadbeat Club," their unforgettable tunes start a dance party every time the music begins.</p>
+                <h1 class="ahjumbotext">The B-52's Shop</h1>
+                <p class="ahbodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Ipsum dolor sit amet consectetur adipiscing elit duis tristique. Tristique et egestas quis ipsum suspendisse ultrices. Ac feugiat sed lectus vestibulum mattis. Egestas diam in arcu cursus.</p>
               </div>
 
         <div class="container">
