gallery and shop

--- a/music.html
+++ b/music.html
@@ -82,7 +82,7 @@
                 </div> 
 
                 <div class="card m-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/album_pm600.jpg" alt="Paty Mix album">
+                    <img class="card-img-top" src="images/album_pm600.jpg" alt="Party Mix album">
                         <div class="card-body">
                             <h3 class="ahheader">Party Mix!</h3>
                             <p class="ahbodytext">Six-track compilation with hits from the first two albums remixed into two long tracks</p>
