responsive video playlist

--- a/gallery.html
+++ b/gallery.html
@@ -88,9 +88,13 @@
                     </a>
                   </div>
         
-                  <div class="container p-5 text-center">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLwjsyswl_Hj8jYFhuN7_Llh7T0Z_h927a" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                  <div class="container p-5">
+                    <div class="embed-responsive embed-responsive-16by9">
+                      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=PLwjsyswl_Hj8jYFhuN7_Llh7T0Z_h927a"></iframe>
+                    </div>
                   </div>
+
 
 
         <footer class="page-footer pt-3">
