fixed typos in about bios

--- a/about.html
+++ b/about.html
@@ -39,16 +39,14 @@
                 <img class="card-img-top" src="images/fred.jpg" alt="Fred Schneider">
                     <div class="card-body">
                         <h3 class="ahheader">Fred Schneider</h3>
-                        <p class="ahbodytext">Hey, I'm Fred the Cancerian from New Jersey
-                                I like collecting records and exploring the cave of the unknown!</p>
+                        <p class="ahbodytext">Hey, I'm Fred the Cancerian from New Jersey. I like collecting records and exploring the cave of the unknown!</p>
                     </div>
             </div> 
             <div class="card m-3" style="width: 18rem;">
                 <img class="card-img-top" src="images/kate.jpg" alt="Kate Pierson">
                     <div class="card-body">
                         <h3 class="ahheader">Kate Pierson</h3>
-                        <p class="ahbodytext">Hey, I'm Kate and I am a Taurus
-                                I love tomatoes and black-capped chickadees!</p>
+                        <p class="ahbodytext">Hey, I'm Kate and I am a Tauru. I love tomatoes and black-capped chickadees!</p>
                     </div>
             </div> 
             <div class="card m-3" style="width: 18rem;">
@@ -69,8 +67,7 @@
                 <img class="card-img-top" src="images/ricky.jpg" alt="Ricky Wilson">
                     <div class="card-body">
                         <h3 class="ahheader">Ricky Wilson</h3>
-                            <p class="ahbodytext">Hi, my name is Ricky and I'm a Pisces
-                                    I love computers and hot tamales!</p>
+                            <p class="ahbodytext">Hi, my name is Ricky and I'm a Pisces. I love computers and hot tamales!</p>
                     </div>
             </div> 
         </div>  
