fixed typos in about bios

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                 <img class="card-img-top" src="images/kate.jpg" alt="Kate Pierson">
                     <div class="card-body">
                         <h3 class="ahheader">Kate Pierson</h3>
-                        <p class="ahbodytext">Hey, I'm Kate and I am a Tauru. I love tomatoes and black-capped chickadees!</p>
+                        <p class="ahbodytext">Hey, I'm Kate and I am a Taurus. I love tomatoes and black-capped chickadees!</p>
                     </div>
             </div> 
             <div class="card m-3" style="width: 18rem;">
