date typo fixed

--- a/tour.html
+++ b/tour.html
@@ -53,7 +53,7 @@
                     <td><a href="https://www.bandsintown.com/t/101244866">TICKETS</a>
                   </tr>
                   <tr>
-                    <td>Dec</td>
+                    <td>Dec 20</td>
                     <td>7:30pm</td>
                     <td>New Orleans, Louisiana</td>
                     <td>Champions Square</td>
