--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>The B-52's</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="./index.css">
+        <link rel="stylesheet" type="text/css" href="css/index.css">
     </head>
     
     <body>
@@ -27,7 +27,7 @@
         </nav>
 
         <div class="text-center">
-            <img src="images/B52s_portrait.png" alt="band portrait">
+            <img src="images/B52s_portrait.png" id="splashswap" alt="band portrait">
         </div>
 
         <footer class="page-footer">
